<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2012 Curtis Larson (QuackWare).
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/previewLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#FFFFFF" >

    <WebView
        android:id="@+id/previewWebView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="#000000"
        android:layout_margin="1dp">
    </WebView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:background="#FFFFFF" >

        <Button
            android:id="@+id/shareButton"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/share"
            android:layout_weight="1"
            android:drawableLeft="@drawable/share"
            android:background="#000000" android:textColor="#FFFFFF"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"/>

        <Button
            android:id="@+id/renameButton"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/rename" 
            android:layout_weight="1"
            android:drawableLeft="@drawable/rename"
            android:background="#000000" android:textColor="#FFFFFF"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:orientation="horizontal"
android:background="#FFFFFF">

        <Button
            android:id="@+id/returnButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/deleteGIF" 
             android:layout_weight="1"
             android:background="#000000" android:textColor="#FFFFFF"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"
            android:drawableLeft="@drawable/delete"/>
        <Button
            android:id="@+id/createAnotherButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/createAnother" 
             android:layout_weight="1"
             android:drawableLeft="@drawable/plus"
             android:background="#000000" android:textColor="#FFFFFF"
            android:layout_margin="1dp"
            android:paddingLeft="10dp"/>
    </LinearLayout>

</LinearLayout>
