<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2012 Curtis Larson (QuackWare).
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <GridView
        android:id="@+id/bitmapgridview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:orientation="vertical" 
        android:background="#FFFFFF">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" 
            android:layout_weight="2">

            <Button
                android:id="@+id/selectAllFrameButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/selectAll"
                android:drawableLeft="@drawable/plus" 
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:background="#000000"
                android:textColor="#FFFFFF">
            </Button>

            <Button
                android:id="@+id/deselectAllFrameButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/deselectAll"
                android:drawableLeft="@drawable/minus"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:background="#000000"
                android:textColor="#FFFFFF">
            </Button>
        </LinearLayout>

        <Button
            android:id="@+id/createGifButton"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:text="@string/createGIF"
            android:layout_margin="1dp"
            android:drawableLeft="@drawable/plusgif"
            android:paddingLeft="20dp"
            android:background="#000000"
                android:textColor="#FFFFFF" >
        </Button>
    </LinearLayout>

</LinearLayout>
