<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center">

<LinearLayout
    android:id="@+id/intervalLinLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:gravity="center"
    android:orientation="vertical" >
        <com.quackware.gifdroid.ui.views.ForcedVideoView
            android:id="@+id/videoview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal|center_vertical" 
            android:layout_weight="1">
        </com.quackware.gifdroid.ui.views.ForcedVideoView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical" 
            android:layout_weight="2">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#000000" >
				<com.quackware.gifdroid.util.RangeSeekBar
            android:id="@+id/rangeSeekBar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >
        </com.quackware.gifdroid.util.RangeSeekBar>
                <ImageButton
                    android:id="@+id/pausePlayButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/playPause"
                    android:src="@drawable/ic_music_play" >
                </ImageButton>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#FFFFFF"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/intervalselector_preferences"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginTop="1dp"
                    android:background="#000000"
                    android:drawableLeft="@drawable/settings"
                    android:paddingLeft="20dp"
                    android:text="@string/editPrefs"
                    android:textColor="#FFFFFF" >
                </Button>
                <Button
                    android:id="@+id/intervalselector_next"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="#000000"
                    android:drawableLeft="@drawable/next_icon"
                    android:paddingLeft="20dp"
                    android:text="@string/next"
                    android:textColor="#FFFFFF" 
                    android:layout_marginBottom="1dp">
                </Button>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
    </ScrollView>